[tool.poetry]
name = "commute-calculator"
version = "0.1.0"
description = ""
authors = ["Jason Short <jason@sheersky.com>"]
readme = "README.md"
packages = [{include = "commute_calculator"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
commutes = "commute_calculator.main:run"
